1998-03-11  Alex Lancaster  <alex@santafe.edu>

	* Makefile.conf (alex-SFI-Solaris): Brought up to date with libffi
	version of Swarm (as per current mgd-SFI-Solaris).

1998-03-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (BLTLIBRARY): Add to mgd-SFI-Solaris and 
	provide a default of ../library.
	(SYSDEPLIBS): Provide -ldld for SYS=HPUX.

	* Makefile (bininc): If to see if BLTLIBRARY directory exists, copy
	the contents of that directory to the binary distribution.

1998-03-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMDIST): Change to swarm-1998-03-04.

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (SFI):  Add AVCALL.  Set it to -lffi.
	(mgd-SFI-Solaris): Add conditional to switch between avcall
	and libffi, default to the latter.
	(SYSLIBS): Use $(AVCALL), not -lavcall.
	(SWARMLIBS): Add -lsimtoolsgui.

1998-02-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (SYSLIBS): Make SYSLIBS conditional on SWARMBACKEND.
	Remove dependence on tclobjc in Java config.
	(SFI): Add SWARMBACKEND conditional, with AWT variables.
	
1998-02-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (mgd-SFI-Solaris): Add FF{PREFIX,INC,LIB} and use in
	OTHERINCDIRS, OTHERLIBDIRS.  Add -lavcall to OTHERLIBS.

1998-02-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (SWARMLIBS): Change from -ljavaobjc to -lawtobjc in
	my AWT SWARMBACKEND config.

1998-02-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf: Add SWARMBACKEND variable in my config with
	Java paths.
	(SWARMLIBS): Add misc.

1998-01-31  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.conf (.m.i): New rule.
	(.SUFFIXES): Add .i.

1998-02-06  Alex Lancaster  <alex@santafe.edu>

	* Makefile.conf: Updated alex-SFI-Solaris configuration. Added
	more flags for gcc28 compiler. Added override += for
	$(OTHER{INC,LIB}DIRS) variables.

1998-01-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
