@@ -47,11 +47,11 @@ SYS=solaris
 CC=/opt/gnu/bin/gcc
 XPREFIX=/opt/X11R6
 FFPREFIX=$(P)/development/ffcall
-FFINC=$(FFPREFIX)/include
-FFLIB=$(FFPREFIX)/lib
-AVCALL=-R$(FFPREFIX)/lib -lffi
-XINC=$(XPREFIX)/include
-XLIB=$(XPREFIX)/lib
+FFINCDIR=$(FFPREFIX)/include
+FFLIBDIR=$(FFPREFIX)/lib
+FFILIB=-R$(FFPREFIX)/lib -lffi
+XINCDIR=$(XPREFIX)/include
+XLIBDIR=$(XPREFIX)/lib
 ifeq ($(SWARMBACKEND),tk)
 TCLVERS=7.6
 TCLPREFIX=/usr/local/tcl$(TCLVERS)
@@ -61,25 +61,25 @@ BLTPREFIX=/usr/local/blt2.3
 TCLOBJCPREFIX=$(P)/swarm/tclobjc-sfi
 #TCLOBJCPREFIX=/usr/local
 
-TCLINC=$(TCLPREFIX)/include
-TCLLIB=$(TCLPREFIX)/lib/tcl$(TCLVERS)
-TKINC=$(TKPREFIX)/include
-TKLIB=$(TKPREFIX)/lib/tk$(TKVERS)
-BLTINC=$(BLTPREFIX)/include
-BLTLIB=$(BLTPREFIX)/lib
-TCLOBJCINC=$(TCLOBJCPREFIX)/include
-TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
+TCLINCDIR=$(TCLPREFIX)/include
+TCLLIBDIR=$(TCLPREFIX)/lib/tcl$(TCLVERS)
+TKINCDIR=$(TKPREFIX)/include
+TKLIBDIR=$(TKPREFIX)/lib/tk$(TKVERS)
+BLTINCDIR=$(BLTPREFIX)/include
+BLTLIBDIR=$(BLTPREFIX)/lib
+TCLOBJCINCDIR=$(TCLOBJCPREFIX)/include
+TCLOBJCLIBDIR=$(TCLOBJCPREFIX)/lib
 
-OTHERINCDIRS=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XINC)
-OTHERLIBDIRS=-L$(XLIB) -L$(BLTLIB) -L$(TKLIB)/.. -L$(TCLLIB)/.. -L$(TCLOBJCLIB)
-override EXTRALDFLAGS+=-R$(BLTLIB)
+OTHERINCDIRS=-I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I$(XINCDIR)
+OTHERLIBDIRS=-L$(XLIBDIR) -L$(BLTLIBDIR) -L$(TKLIBDIR)/.. -L$(TCLLIBDIR)/.. -L$(TCLOBJCLIBDIR)
+override EXTRALDFLAGS+=-R$(BLTLIBDIR)
 else
 override EXTRACFLAGS+=-DUSE_JAVA
 JAVALIB=$(JAVA_HOME)/lib/sparc
 JAVAINC=$(JAVA_HOME)/include
-OTHERINCDIRS=-I$(FFINC) -I$(JAVAINC) -I$(JAVAINC)/solaris -I$(XINC)
-OTHERLIBDIRS=-L$(FFLIB) -L$(JAVALIB)/$(JAVA_THREADS)_threads -L$(JAVALIB) -L$(XLIB)
-override EXTRALDFLAGS+=-R$(JAVALIB)
+OTHERINCDIRS=-I$(FFINCDIR) -I$(JAVAINCDIR) -I$(JAVAINCDIR)/solaris -I$(XINCDIR)
+OTHERLIBDIRS=-L$(FFLIBDIR) -L$(JAVALIBDIR)/$(JAVA_THREADS)_threads -L$(JAVALIBDIR) -L$(XLIBDIR)
+override EXTRALDFLAGS+=-R$(JAVALIBDIR)
 JAVAC=$(JAVA_HOME)/bin/javac
 endif
 
@@ -108,42 +108,42 @@ endif
 endif
 
 XPREFIX=/opt/X11R6
-XINC=$(XPREFIX)/include
-XLIB=$(XPREFIX)/lib
+XINCDIR=$(XPREFIX)/include
+XLIBDIR=$(XPREFIX)/lib
 
 ifeq (1,0)
 FFPREFIX=$(P)/development/ffcall
-AVCALL=-lavcall
+FFILIB=-lavcall
 override EXTRACFLAGS+=-DUSE_AVCALL
 else
 FFPREFIX=$(P)/development/libffi
-AVCALL=-R$(FFPREFIX)/lib -lffi
+FFILIB=-R$(FFPREFIX)/lib -lffi
 endif
-FFINC=$(FFPREFIX)/include
-FFLIB=$(FFPREFIX)/lib
+FFINCDIR=$(FFPREFIX)/include
+FFLIBDIR=$(FFPREFIX)/lib
 
 ifeq ($(SWARMBACKEND),tk)
 TCLVERS=8.0
 TKVERS=8.0
-TCLINC=$(P)/swarm/tcl$(TCLVERS)/include
-TKINC=$(P)/swarm/tk$(TKVERS)/include
-TCLLIB=$(P)/swarm/tcl$(TCLVERS)/lib/tcl$(TCLVERS)
-TKLIB=$(P)/swarm/tk$(TKVERS)/lib/tk$(TKVERS)
+TCLINCDIR=$(P)/swarm/tcl$(TCLVERS)/include
+TKINCDIR=$(P)/swarm/tk$(TKVERS)/include
+TCLLIBDIR=$(P)/swarm/tcl$(TCLVERS)/lib/tcl$(TCLVERS)
+TKLIBDIR=$(P)/swarm/tk$(TKVERS)/lib/tk$(TKVERS)
 BLTVERS=8.0-unoff
-BLTINC=$(P)/swarm/blt$(BLTVERS)/include
-BLTLIB=$(P)/swarm/blt$(BLTVERS)/lib
-TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
-TCLOBJCINC=$(TCLOBJCPREFIX)/include
-OTHERINCDIRS=-I$(FFINC) -I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XINC) # -I/opt/local/include
-OTHERLIBDIRS=-L$(FFLIB) -L$(XLIB) -L$(BLTLIB) -L$(TCLOBJCLIB) -L$(TCLLIB)/.. -L$(TKLIB)/..
-override EXTRALDFLAGS+=-R$(BLTLIB) -R$(TKLIB)/.. -R$(TCLLIB)/.. 
+BLTINCDIR=$(P)/swarm/blt$(BLTVERS)/include
+BLTLIBDIR=$(P)/swarm/blt$(BLTVERS)/lib
+TCLOBJCLIBDIR=$(TCLOBJCPREFIX)/lib
+TCLOBJCINCDIR=$(TCLOBJCPREFIX)/include
+OTHERINCDIRS=-I$(FFINCDIR) -I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I$(XINCDIR) # -I/opt/local/include
+OTHERLIBDIRS=-L$(FFLIBDIR) -L$(XLIBDIR) -L$(BLTLIBDIR) -L$(TCLOBJCLIBDIR) -L$(TCLLIBDIR)/.. -L$(TKLIBDIR)/..
+override EXTRALDFLAGS+=-R$(BLTLIBDIR) -R$(TKLIBDIR)/.. -R$(TCLLIBDIR)/.. 
 else # AWT backend
 override EXTRACFLAGS+=-DUSE_JAVA
-JAVALIB=$(JAVA_HOME)/lib/sparc
-JAVAINC=$(JAVA_HOME)/include
-OTHERINCDIRS=-I$(FFINC) -I$(JAVAINC) -I$(JAVAINC)/solaris -I$(XINC)
-OTHERLIBDIRS=-L$(FFLIB) -L$(JAVALIB)/$(JAVA_THREADS)_threads -L$(JAVALIB) -L$(XLIB)
-override EXTRALDFLAGS+=-R$(JAVALIB)
+JAVALIBDIR=$(JAVA_HOME)/lib/sparc
+JAVAINCDIR=$(JAVA_HOME)/include
+OTHERINCDIRS=-I$(FFINCDIR) -I$(JAVAINCDIR) -I$(JAVAINCDIR)/solaris -I$(XINCDIR)
+OTHERLIBDIRS=-L$(FFLIBDIR) -L$(JAVALIBDIR)/$(JAVA_THREADS)_threads -L$(JAVALIBDIR) -L$(XLIBDIR)
+override EXTRALDFLAGS+=-R$(JAVALIBDIR)
 JAVAC=$(JAVA_HOME)/bin/javac
 endif
 endif
@@ -156,28 +156,28 @@ OPTFLAGS=-O3 -g
 TCLVERS=7.6
 #TCLPREFIX=$(P)/swarm/tcl$(TCLVERS)
 TCLPREFIX=/usr
-TCLINC=$(TCLPREFIX)/include
-TCLLIB=$(TCLPREFIX)/lib/tcl$(TCLVERS)
+TCLINCDIR=$(TCLPREFIX)/include
+TCLLIBDIR=$(TCLPREFIX)/lib/tcl$(TCLVERS)
 TKVERS=4.2
 #TKPREFIX=$(P)/swarm/tk$(TKVERS)
 TKPREFIX=/usr
-TKINC=$(TKPREFIX)/include
-TKLIB=$(TKPREFIX)/lib/tk$(TKVERS)
+TKINCDIR=$(TKPREFIX)/include
+TKLIBDIR=$(TKPREFIX)/lib/tk$(TKVERS)
 BLTPREFIX=$(P)/swarm/blt2.3
-BLTINC=$(BLTPREFIX)/include
-BLTLIB=$(BLTPREFIX)/lib
+BLTINCDIR=$(BLTPREFIX)/include
+BLTLIBDIR=$(BLTPREFIX)/lib
 XPREFIX=/usr/X11R6
-XINC=$(XPREFIX)/include
-XLIB=$(XPREFIX)/lib
+XINCDIR=$(XPREFIX)/include
+XLIBDIR=$(XPREFIX)/lib
 TCLOBJCPREFIX=$(P)/swarm/tclobjc-new
-TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
-TCLOBJCINC=$(TCLOBJCPREFIX)/include
+TCLOBJCLIBDIR=$(TCLOBJCPREFIX)/lib
+TCLOBJCINCDIR=$(TCLOBJCPREFIX)/include
 
-# don't point to $(TKINC) - in same place as $(TCLINC)
+# don't point to $(TKINCDIR) - in same place as $(TCLINCDIR)
 # strictly a kludge!
-override OTHERINCDIRS+=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(XINC) # -I$(TKINC)  
-override OTHERLIBDIRS+=-L$(XLIB) -L$(BLTLIB) -L$(TCLOBJCLIB) -L$(TCLLIB)/.. -L$(TKLIB)/..
-override EXTRALDFLAGS+=-Wl,-rpath,$(BLTLIB),-rpath,$(TKLIB)/..,-rpath,$(TCLLIB)/..
+override OTHERINCDIRS+=-I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(XINCDIR) # -I$(TKINCDIR)  
+override OTHERLIBDIRS+=-L$(XLIBDIR) -L$(BLTLIBDIR) -L$(TCLOBJCLIBDIR) -L$(TCLLIBDIR)/.. -L$(TKLIBDIR)/..
+override EXTRALDFLAGS+=-Wl,-rpath,$(BLTLIBDIR),-rpath,$(TKLIBDIR)/..,-rpath,$(TCLLIBDIR)/..
 endif
 
 ifeq ($(SETUP),mgd-SFI-Solaris)
@@ -201,41 +201,41 @@ TCLOBJCPREFIX=$(P)/swarm/tclobjc-tcltk8.0-gcc
 endif
 endif
 XPREFIX=/opt/X11R6
-XINC=$(XPREFIX)/include
-XLIB=$(XPREFIX)/lib
+XINCDIR=$(XPREFIX)/include
+XLIBDIR=$(XPREFIX)/lib
 ifeq (1,0)
 FFPREFIX=$(P)/development/ffcall
-AVCALL=-lavcall
+FFILIB=-lavcall
 override EXTRACFLAGS+=-DUSE_AVCALL
 else
 FFPREFIX=$(P)/development/libffi
-AVCALL=-R$(FFPREFIX)/lib -lffi
+FFILIB=-R$(FFPREFIX)/lib -lffi
 endif
-FFINC=$(FFPREFIX)/include
-FFLIB=$(FFPREFIX)/lib
+FFINCDIR=$(FFPREFIX)/include
+FFLIBDIR=$(FFPREFIX)/lib
 ifeq ($(SWARMBACKEND),tk)
 TCLVERS=8.0
 TKVERS=8.0
-TCLINC=$(P)/swarm/tcl$(TCLVERS)/include
-TKINC=$(P)/swarm/tk$(TKVERS)/include
-TCLLIB=$(P)/swarm/tcl$(TCLVERS)/lib/tcl$(TCLVERS)
-TKLIB=$(P)/swarm/tk$(TKVERS)/lib/tk$(TKVERS)
+TCLINCDIR=$(P)/swarm/tcl$(TCLVERS)/include
+TKINCDIR=$(P)/swarm/tk$(TKVERS)/include
+TCLLIBDIR=$(P)/swarm/tcl$(TCLVERS)/lib/tcl$(TCLVERS)
+TKLIBDIR=$(P)/swarm/tk$(TKVERS)/lib/tk$(TKVERS)
 BLTVERS=8.0-unoff
-BLTINC=$(P)/swarm/blt$(BLTVERS)/include
-BLTLIB=$(P)/swarm/blt$(BLTVERS)/lib
-BLTLIBRARY=$(P)/swarm/blt$(BLTVERS)/library
-TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
-TCLOBJCINC=$(TCLOBJCPREFIX)/include
-OTHERINCDIRS=-I$(FFINC) -I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XINC) # -I/opt/local/include
-OTHERLIBDIRS=-L$(FFLIB) -L$(XLIB) -L$(BLTLIB) -L$(TCLOBJCLIB) -L$(TCLLIB)/.. -L$(TKLIB)/..
-override EXTRALDFLAGS+=-R$(BLTLIB) -R$(TKLIB)/.. -R$(TCLLIB)/.. 
+BLTINCDIR=$(P)/swarm/blt$(BLTVERS)/include
+BLTLIBDIR=$(P)/swarm/blt$(BLTVERS)/lib
+BLTLIBRARYDIR=$(P)/swarm/blt$(BLTVERS)/library
+TCLOBJCLIBDIR=$(TCLOBJCPREFIX)/lib
+TCLOBJCINCDIR=$(TCLOBJCPREFIX)/include
+OTHERINCDIRS=-I$(FFINCDIR) -I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I$(XINCDIR) # -I/opt/local/include
+OTHERLIBDIRS=-L$(FFLIBDIR) -L$(XLIBDIR) -L$(BLTLIBDIR) -L$(TCLOBJCLIBDIR) -L$(TCLLIBDIR)/.. -L$(TKLIBDIR)/..
+override EXTRALDFLAGS+=-R$(BLTLIBDIR) -R$(TKLIBDIR)/.. -R$(TCLLIBDIR)/.. 
 else
 override EXTRACFLAGS+=-DUSE_JAVA
 JAVALIB=$(JAVA_HOME)/lib/sparc
 JAVAINC=$(JAVA_HOME)/include
-OTHERINCDIRS=-I$(FFINC) -I$(JAVAINC) -I$(JAVAINC)/solaris -I$(XINC)
-OTHERLIBDIRS=-L$(FFLIB) -L$(JAVALIB)/$(JAVA_THREADS)_threads -L$(JAVALIB) -L$(XLIB)
-override EXTRALDFLAGS+=-R$(JAVALIB)
+OTHERINCDIRS=-I$(FFINCDIR) -I$(JAVAINCDIR) -I$(JAVAINCDIR)/solaris -I$(XINCDIR)
+OTHERLIBDIRS=-L$(FFLIBDIR) -L$(JAVALIBDIR)/$(JAVA_THREADS)_threads -L$(JAVALIBDIR) -L$(XLIBDIR)
+override EXTRALDFLAGS+=-R$(JAVALIBDIR)
 JAVAC=$(JAVA_HOME)/bin/javac
 endif
 
@@ -261,47 +261,47 @@ TCLOBJCPREFIX=$(P)/swarm/tclobjc-egcs
 endif
 OPTFLAGS=-O3 -g
 TCLPREFIX=$(P)/swarm/tcl$(TCLVERS)
-TCLINC=$(TCLPREFIX)/include
-TCLLIB=$(TCLPREFIX)/lib/tcl$(TCLVERS)
+TCLINCDIR=$(TCLPREFIX)/include
+TCLLIBDIR=$(TCLPREFIX)/lib/tcl$(TCLVERS)
 TKPREFIX=$(P)/swarm/tk$(TKVERS)
-TKINC=$(TKPREFIX)/include
-TKLIB=$(TKPREFIX)/lib/tk$(TKVERS)
+TKINCDIR=$(TKPREFIX)/include
+TKLIBDIR=$(TKPREFIX)/lib/tk$(TKVERS)
 BLTPREFIX=$(P)/swarm/blt$(BLTVERS)
-BLTINC=$(BLTPREFIX)/include
-BLTLIB=$(BLTPREFIX)/lib
+BLTINCDIR=$(BLTPREFIX)/include
+BLTLIBDIR=$(BLTPREFIX)/lib
 XPREFIX=/usr/X11R6
-XINC=$(XPREFIX)/include
-XLIB=$(XPREFIX)/lib
-TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
-TCLOBJCINC=$(TCLOBJCPREFIX)/include
+XINCDIR=$(XPREFIX)/include
+XLIBDIR=$(XPREFIX)/lib
+TCLOBJCLIBDIR=$(TCLOBJCPREFIX)/lib
+TCLOBJCINCDIR=$(TCLOBJCPREFIX)/include
 
-OTHERINCDIRS=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XINC) # -I/opt/local/include
-OTHERLIBDIRS=-L$(XLIB) -L$(BLTLIB) -L$(TCLOBJCLIB) -L$(TCLLIB)/.. -L$(TKLIB)/..
-override EXTRALDFLAGS+=-Wl,-rpath,$(BLTLIB),-rpath,$(TKLIB)/..,-rpath,$(TCLLIB)/..
+OTHERINCDIRS=-I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I$(XINCDIR) # -I/opt/local/include
+OTHERLIBDIRS=-L$(XLIBDIR) -L$(BLTLIBDIR) -L$(TCLOBJCLIBDIR) -L$(TCLLIBDIR)/.. -L$(TKLIBDIR)/..
+override EXTRALDFLAGS+=-Wl,-rpath,$(BLTLIBDIR),-rpath,$(TKLIBDIR)/..,-rpath,$(TCLLIBDIR)/..
 endif
 
 ifeq ($(SETUP),mgd-FSF-NetBSD) # Alpha
 SYS=NetBSD
 CC=gcc
 OPTFLAGS=-O3 -g
-TCLINC=$(P)/swarm/tcl/include
-TKINC=$(P)/swarm/tk/include
-BLTINC=$(P)/swarm/blt/include
-BLTLIB=$(P)/swarm/blt/lib
+TCLINCDIR=$(P)/swarm/tcl/include
+TKINCDIR=$(P)/swarm/tk/include
+BLTINCDIR=$(P)/swarm/blt/include
+BLTLIBDIR=$(P)/swarm/blt/lib
 XPREFIX=/usr/X11R6
-XINC=$(XPREFIX)/include
-XLIB=$(XPREFIX)/lib
-TCLOBJCLIB=$(P)/swarm/tclobjc/lib
-TCLOBJCINC=$(P)/swarm/tclobjc/include
+XINCDIR=$(XPREFIX)/include
+XLIBDIR=$(XPREFIX)/lib
+TCLOBJCLIBDIR=$(P)/swarm/tclobjc/lib
+TCLOBJCINCDIR=$(P)/swarm/tclobjc/include
 TCLVERS=76
 TKVERS=42
-TCLLIB=$(P)/swarm/tcl/lib/tcl7.6
-TKLIB=$(P)/swarm/tk/lib/tk4.2
+TCLLIBDIR=$(P)/swarm/tcl/lib/tcl7.6
+TKLIBDIR=$(P)/swarm/tk/lib/tk4.2
 
-OTHERINCDIRS=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XINC)
-OTHERLIBDIRS=-L$(XLIB) -L$(BLTLIB) -L$(TCLOBJCLIB) -L$(TCLLIB)/.. -L$(TKLIB)/..
+OTHERINCDIRS=-I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I$(XINCDIR)
+OTHERLIBDIRS=-L$(XLIBDIR) -L$(BLTLIBDIR) -L$(TCLOBJCLIBDIR) -L$(TCLLIBDIR)/.. -L$(TKLIBDIR)/..
 override EXTRACFLAGS+=-I/usr/local/lib/gcc-lib/alpha-unknown-netbsd1.2D/2.7.2.2/include -Wno-unused
-override EXTRALDFLAGS+=-Wl,-rpath,$(P)/swarm/blt/lib,-rpath,$(TKLIB)/..,-rpath,$(TCLLIB)/..,-rpath,$(XLIB)
+override EXTRALDFLAGS+=-Wl,-rpath,$(P)/swarm/blt/lib,-rpath,$(TKLIBDIR)/..,-rpath,$(TCLLIBDIR)/..,-rpath,$(XLIBDIR)
 endif
 
 ifeq ($(SETUP),mgd-PSU-GNU/Linux)
@@ -311,8 +311,8 @@ TCLVERS=7.6
 TKVERS=4.2
 TCLPREFIX=$(P)/swarm/tcl$(TCLVERS)
 TKPREFIX=$(P)/swarm/tk$(TKVERS)
-TCLINC=$(TCLPREFIX)/include
-TKINC=$(TKPREFIX)/include
+TCLINCDIR=$(TCLPREFIX)/include
+TKINCDIR=$(TKPREFIX)/include
 BLTPREFIX=$(P)/swarm/blt2.3
 ifeq ($(SWARMCOMPILER),gcc28)
 CC=/packages/development/gcc/bin/i586-glibc-linux-gcc -V 2.8.0
@@ -326,8 +326,8 @@ TCLOBJCPREFIX=$(P)/swarm/tclobjc-new
 override EXTRACFLAGS+=-Wno-implicit-int -Werror
 TCLPREFIX=/usr
 TKPREFIX=/usr
-TCLINC=/usr/include/tcl
-TKINC=/usr/include/tcl
+TCLINCDIR=/usr/include/tcl
+TKINCDIR=/usr/include/tcl
 BLTPREFIX=$(P)/swarm/blt2.3-libc1
 else
 ifeq ($(SWARMCOMPILER),gcc-libc1)
@@ -335,8 +335,8 @@ CC=/usr/bin/gcc
 TCLOBJCPREFIX=$(P)/swarm/tclobjc
 TCLPREFIX=/usr
 TKPREFIX=/usr
-TCLINC=/usr/include/tcl
-TKINC=/usr/include/tcl
+TCLINCDIR=/usr/include/tcl
+TKINCDIR=/usr/include/tcl
 BLTPREFIX=$(P)/swarm/blt2.3-libc1
 else
 CC=i586-glibc-linux-gcc -V 2.7.2.2
@@ -345,18 +345,18 @@ override EXTRACFLAGS+=-Werror
 endif
 endif
 endif
-BLTINC=$(BLTPREFIX)/include
-BLTLIB=$(BLTPREFIX)/lib
+BLTINCDIR=$(BLTPREFIX)/include
+BLTLIBDIR=$(BLTPREFIX)/lib
 XPREFIX=/usr/X11R6
-XINC=$(XPREFIX)/include
-XLIB=$(XPREFIX)/lib
-TCLLIB=$(TCLPREFIX)/lib/tcl$(TCLVERS)
-TKLIB=$(TKPREFIX)/lib/tk$(TKVERS)
-TCLOBJCINC=$(TCLOBJCPREFIX)/include
-TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
-OTHERINCDIRS=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XINC)
-OTHERLIBDIRS=-L$(BLTLIB) -L$(TCLOBJCLIB) -L$(TKLIB)/.. -L$(TCLLIB)/.. -L$(XLIB)
-override EXTRALDFLAGS+=-Wl,-rpath,$(BLTLIB),-rpath,$(TKLIB)/..,-rpath,$(TCLLIB)/..
+XINCDIR=$(XPREFIX)/include
+XLIBDIR=$(XPREFIX)/lib
+TCLLIBDIR=$(TCLPREFIX)/lib/tcl$(TCLVERS)
+TKLIBDIR=$(TKPREFIX)/lib/tk$(TKVERS)
+TCLOBJCINCDIR=$(TCLOBJCPREFIX)/include
+TCLOBJCLIBDIR=$(TCLOBJCPREFIX)/lib
+OTHERINCDIRS=-I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I$(XINCDIR)
+OTHERLIBDIRS=-L$(BLTLIBDIR) -L$(TCLOBJCLIBDIR) -L$(TKLIBDIR)/.. -L$(TCLLIBDIR)/.. -L$(XLIBDIR)
+override EXTRALDFLAGS+=-Wl,-rpath,$(BLTLIBDIR),-rpath,$(TKLIBDIR)/..,-rpath,$(TCLLIBDIR)/..
 #override EXTRACFLAGS+=-pg
 #override EXTRALDFLAGS+=-pg
 endif
@@ -379,20 +379,20 @@ TCLVERS=7.6
 TKVERS=4.2
 TCLPREFIX=$(P)/swarm/tcl$(TCLVERS)
 TKPREFIX=$(P)/swarm/tk$(TKVERS)
-TCLINC=$(TCLPREFIX)/include
-TCLLIB=$(TCLPREFIX)/lib/tcl$(TCLVERS)
-TKINC=$(TKPREFIX)/include
-TKLIB=$(TKPREFIX)/lib/tk$(TKVERS)
+TCLINCDIR=$(TCLPREFIX)/include
+TCLLIBDIR=$(TCLPREFIX)/lib/tcl$(TCLVERS)
+TKINCDIR=$(TKPREFIX)/include
+TKLIBDIR=$(TKPREFIX)/lib/tk$(TKVERS)
 BLTPREFIX=$(P)/swarm/blt2.3
-BLTINC=$(BLTPREFIX)/include
-BLTLIB=$(BLTPREFIX)/lib
+BLTINCDIR=$(BLTPREFIX)/include
+BLTLIBDIR=$(BLTPREFIX)/lib
 XPMPREFIX=$(P)/X/xpm
-XPMINC=$(XPMPREFIX)/include
-XPMLIB=$(XPMPREFIX)/lib
-TCLOBJCLIB=$(TCLOBJCPREFIX)/lib
-TCLOBJCINC=$(TCLOBJCPREFIX)/include
-OTHERINCDIRS=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I$(XPMINC)
-OTHERLIBDIRS=-L$(BLTLIB) -L$(TCLOBJCLIB) -L$(TCLLIB)/.. -L$(TKLIB)/.. -L$(XPMLIB)
+XPMINCDIR=$(XPMPREFIX)/include
+XPMLIBDIR=$(XPMPREFIX)/lib
+TCLOBJCLIBDIR=$(TCLOBJCPREFIX)/lib
+TCLOBJCINCDIR=$(TCLOBJCPREFIX)/include
+OTHERINCDIRS=-I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I$(XPMINCDIR)
+OTHERLIBDIRS=-L$(BLTLIBDIR) -L$(TCLOBJCLIBDIR) -L$(TCLLIBDIR)/.. -L$(TKLIBDIR)/.. -L$(XPMLIBDIR)
 #override EXTRACFLAGS+=-pg
 #override EXTRALDFLAGS+=-pg
 endif
@@ -400,18 +400,18 @@ endif
 ifeq ($(SETUP),umich)
 SYS=hpux
 ### the following 6 variables are needed to *make* binary distributions
-TCLINC=/usr/local/include/tcl7.4
-TKINC=/usr/local/include/tk4.0
-BLTINC=/usr/local/blt-2.1/include
-BLTLIB=/usr/local/blt-2.1/lib
-XINC=/usr/local/include
-TCLOBJCINC=/usr/local/include/tclobjc
-TKLIB=/usr/local/lib/tk4.0
-TCLLIB=/usr/local/lib/tcl7.4
+TCLINCDIR=/usr/local/include/tcl7.4
+TKINCDIR=/usr/local/include/tk4.0
+BLTINCDIR=/usr/local/blt-2.1/include
+BLTLIBDIR=/usr/local/blt-2.1/lib
+XINCDIR=/usr/local/include
+TCLOBJCINCDIR=/usr/local/include/tclobjc
+TKLIBDIR=/usr/local/lib/tk4.0
+TCLLIBDIR=/usr/local/lib/tcl7.4
 TCLVERS=7.4
 TKVERS=4.0
 
-OTHERINCDIRS=-I$(TCLOBJCINC) -I$(BLTINC) -I$(TCLINC) -I$(TKINC) -I/usr/include/X11R5
+OTHERINCDIRS=-I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(TCLINCDIR) -I$(TKINCDIR) -I/usr/include/X11R5
 # OTHERINCDIRS=-I/usr/include/X11R5 -I/usr/local/blt-2.1/include -I/usr/local/include
 OTHERLIBDIRS=-L/usr/lib/X11R5  -L/usr/local/blt-2.1/lib -L/usr/local/lib 
 endif
@@ -432,15 +432,15 @@ CC=gcc
 ### the following 6 variables are needed to *make* binary distributions
 
 # for 7.5/4.1, I needed Tcl.h, Tk.h, tcl.h, tclObjc.h, tk.h
-TCLINC=/usr/include/tcl7.5
-TKINC=$(TCLINC)
-TCLOBJCINC=$(TCLINC)
+TCLINCDIR=/usr/include/tcl7.5
+TKINCDIR=$(TCLINCDIR)
+TCLOBJCINCDIR=$(TCLINCDIR)
 
-BLTINC=/usr/local/blt/include
-BLTLIB=/usr/local/blt/lib/blt2.1
-XINC=/usr/X11R6/include/X11
-TCLLIB=/usr/lib/tcl7.5
-TKLIB=/usr/lib/tk4.1
+BLTINCDIR=/usr/local/blt/include
+BLTLIBDIR=/usr/local/blt/lib/blt2.1
+XINCDIR=/usr/X11R6/include/X11
+TCLLIBDIR=/usr/lib/tcl7.5
+TKLIBDIR=/usr/lib/tk4.1
 TCLVERS=7.5
 TKVERS=4.1
 
@@ -456,24 +456,24 @@ CC=gcc
 ### the following 6 variables are needed to *make* binary distributions
 
 # for 7.5/4.1, I needed Tcl.h, Tk.h, tcl.h, tclObjc.h, tk.h
-TCLINC=/usr/local/apps/tcl7.5/include
-TKINC=/usr/local/apps/tk4.1b3/include
-TCLOBJCINC=/mount/munkora/home/guest/sfi/gepr/xtra/libtclobjc-1.1b7
-BLTINC=/usr/local/apps/blt2.1/include
-BLTLIB=/usr/local/apps/blt2.1/lib/blt2.1
-XINC=/usr/local/X11
-TCLLIB=/usr/local/apps/tcl7.5/lib/tcl7.5
-TKLIB=/usr/local/apps/tk4.1b3/lib/tk4.1
+TCLINCDIR=/usr/local/apps/tcl7.5/include
+TKINCDIR=/usr/local/apps/tk4.1b3/include
+TCLOBJCINCDIR=/mount/munkora/home/guest/sfi/gepr/xtra/libtclobjc-1.1b7
+BLTINCDIR=/usr/local/apps/blt2.1/include
+BLTLIBDIR=/usr/local/apps/blt2.1/lib/blt2.1
+XINCDIR=/usr/local/X11
+TCLLIBDIR=/usr/local/apps/tcl7.5/lib/tcl7.5
+TKLIBDIR=/usr/local/apps/tk4.1b3/lib/tk4.1
 TCLVERS=7.5
 TKVERS=4.1
 
-OTHERINCDIRS=-I$(TCLINC) -I$(TKINC) -I$(TCLOBJCINC) -I$(BLTINC) -I$(XINC)
+OTHERINCDIRS=-I$(TCLINCDIR) -I$(TKINCDIR) -I$(TCLOBJCINCDIR) -I$(BLTINCDIR) -I$(XINCDIR)
 OTHERLIBDIRS=-L/usr/local/X11/lib  -L/usr/local/apps/tcl7.5/lib -L/usr/local/apps/tk4.1b3/lib -L/usr/local/apps/blt2.1/lib -L/mount/munkora/home/guest/sfi/gepr/xtra/libtclobjc-1.1b6 #-L/usr/local/apps/libtclobjc-1.1b6/lib
 SYSDEPLIBS=-lreadline -lcurses #-ldl
 endif
 
-ifeq ($(BLTLIBRARY),)
-BLTLIBRARY=$(BLTLIB)/../library
+ifeq ($(BLTLIBRARYDIR),)
+BLTLIBRARYDIR=$(BLTLIBDIR)/../library
 endif
 
 ifeq ($(SYS),solaris)
@@ -548,10 +548,19 @@ endif
 MINLDFLAGS=	-L$(LIBDIR) $(OTHERLIBDIRS) $(EXTRALDFLAGS)
 LDFLAGS=	-g $(MINLDFLAGS)
 
-ifeq ($(SWARMBACKEND),tk)
-SYSLIBS=-ltclobjc -lBLT -ltk$(TKVERS) -ltcl$(TCLVERS) -lXpm $(AVCALL)
+ifeq ($(SYS),NT)
+SYSDEPLIBS=-luser32 -lgdi32
+X11LIB=
+XPMLIB=
 else
-SYSLIBS=-ljava_g -lavcall
+X11LIB=-lX11
+XPMLIB=-lXpm
+endif
+
+ifeq ($(SWARMBACKEND),tk)
+SYSLIBS=-ltclobjc -lBLT -ltk$(TKVERS) -ltcl$(TCLVERS) $(XPMLIBDIR) $(FFILIB)
+else
+SYSLIBS=-ljava_g $(FFILIB)
 endif
 
 ### Swarm can either be used in an "archive" configuration, where
@@ -560,10 +569,10 @@ endif
 ### that has most of the user library dependent routines already linked
 ### into it
 ifeq ($(LDCONFIG),bin)
-LIBS= $(APPLIBS) $(DISTOBJ) -lobjc -lX11 -lm $(OTHERLIBS) $(SYSDEPLIBS)
+LIBS= $(APPLIBS) $(DISTOBJ) -lobjc $(X11LIB) -lm $(OTHERLIBS) $(SYSDEPLIBS)
 else
 SWARMLIBS= -lanalysis -lsimtools -lsimtoolsgui -l$(SWARMBACKEND)objc -lactivity -lrandom -lobjectbase -lcollections -ldefobj -lmisc
-LIBS= $(APPLIBS) $(SWARMLIBS) $(SYSLIBS) -lobjc -lX11 -lm $(OTHERLIBS) $(SYSDEPLIBS)
+LIBS= $(APPLIBS) $(SWARMLIBS) $(SYSLIBS) -lobjc $(X11LIB) -lm $(OTHERLIBS) $(SYSDEPLIBS)
 endif
 
 ### Suffix rules for default compilation.
